tests/fsharp/typecheck/sigs/neg34.bsl

neg34.fsi(3,19,3,24): typecheck error FS0001: A type parameter is missing a constraint 'when 'a: struct'
