tests/fsharp/typecheck/sigs/neg34.fsi
module Bbb
type G<'a when 'a : struct>
val h<'a> : 'a -> G<'a>
